2014-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* UndoStep.h:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp: 

2014-07-02  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* titania:
	* Makefile.am:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* BrowserWindow.xml:
	* MaterialEditor.cpp:
	* .dirstamp:
	* MaterialEditor.xml:
	* RenderStyleEditor.h:
	* RenderStyleEditor.xml:
	* RenderStyleEditor.cpp:
	* .dirstamp:
	* NodePropertiesEditor.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* GeometryPropertiesEditor.xml:
	* X3DRenderStyleEditorInterface.h:
	* X3DRenderStyleEditorInterface.cpp:
	* GeometryPropertiesEditor.h:
	* X3DGeometryPropertiesEditorInterface.h:
	* GeometryPropertiesEditor.cpp:
	* X3DGeometryPropertiesEditorInterface.cpp: 

2014-06-30  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* MaterialEditor.xml:
	* RenderStyleEditor.h:
	* RenderStyleEditor.xml:
	* RenderStyleEditor.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* X3DRenderStyleEditorInterface.h:
	* X3DRenderStyleEditorInterface.cpp: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-06-11  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* X3DBrowserEditor.cpp: 

2014-06-10  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl: 

2014-06-06  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeObserver.cpp: 

2014-06-05  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* Console.h:
	* style.css:
	* Console.cpp:
	* Console.xml:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DBrowserWidget.h:
	* BrowserWindow.xml:
	* X3DBrowserWidget.cpp:
	* X3DConsoleInterface.h:
	* X3DConsoleInterface.cpp:
	* NodePropertiesEditor.xml:
	* X3DBrowserWindowInterface.h: