@@ -1,3 +1,11 @@
+2014-07-05  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserWindow.cpp:
+	* MaterialEditor.h:
+	* MaterialEditor.cpp:
+	* NodePropertiesEditor.cpp:
+	* GeometryPropertiesEditor.cpp: 
+
 2014-07-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* run.pl:
